# dataman

./: .dvcignore  .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-06-13-dataman-design.md
src/dataman/: cli.py  config.py  dvc_ops.py  git_ops.py  metadata.py  naming.py  nfs_config.py  registry.py  scanner.py
src/dataman/web/: app.py  reader.py  routes.py
src/dataman/web/static/: detail.html  index.html
tests/: conftest.py  test_cli.py  test_dvc_ops.py  test_git_ops.py  test_metadata.py  test_naming.py  test_nfs_config.py  test_registry.py  test_scanner.py
tests/web/: test_reader.py  test_routes.py
